# Template_Repo

./: .gitignore  Developers_Guide_ru.md  LICENSE  MANUAL_poetry.lock_README.md  README.md  SETUP.md  SETUP_PROJ_FROM_TEMPLATE.md  pyproject.toml
.copilot/: instructions.md  promts_minimal.md
scripts/: README.md  change_from_template_to_project.ps1  install_dependencies_minimal.ps1  sync_environment_minimal.ps1  update_dependencies.ps1  update_vscode-extensions.txt
src/: .\scripts\update_poetry_lock.ps1  README.md  __init__.py  main  update_dependencies_to_latest.ps1  update_poetry_from_pyproject.ps1
test/: README_TEMPLATE.md  __init__.py  template_test_example.py
