[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shared_utilities"
version = "0.1.0"
description = "Shared utilities for Python projects"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anyio>=4.9.0",
    "asttokens>=3.0.0",
    "CacheControl>=0.14.3",
    "certifi>=2025.7.14",
    "charset-normalizer>=3.4.2",
    "cleo>=2.1.0",
    "colorama>=0.4.6",
    "comm>=0.2.2",
    "decorator>=5.2.1",
    "distlib>=0.4.0",
    "dulwich>=0.22.8",
    "executing>=2.2.0",
    "fastjsonschema>=2.21.1",
    "filelock>=3.18.0",
    "findpython>=0.6.3",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "idna>=3.10",
    "installer>=0.7.0",
    "ipykernel>=6.29.5",
    "jaraco.classes>=3.4.0",
    "jaraco.context>=6.0.1",
    "jaraco.functools>=4.2.1",
    "jedi>=0.19.2",
    "keyring>=25.6.0",
    "matplotlib-inline>=0.1.7",
    "more-itertools>=10.7.0",
    "msgpack>=1.1.1",
    "nest-asyncio>=1.6.0",
    "packaging>=25.0",
    "parso>=0.8.4",
    "pbs-installer>=2025.7.12",
    "pkginfo>=1.12.1.2",
    "platformdirs>=4.3.8",
    "prompt_toolkit>=3.0.51",
    "psutil>=7.0.0",
    "pure_eval>=0.2.3",
    "Pygments>=2.19.1",
    "pyproject_hooks>=1.2.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.0",
    "pywin32>=310",
    "pywin32-ctypes>=0.2.3",
    "pyzmq>=26.4.0",
    "RapidFuzz>=3.13.0",
    "requests>=2.32.4",
    "requests-toolbelt>=1.0.0",
    "shellingham>=1.5.4",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "stack-data>=0.6.3",
    "tomlkit>=0.13.3",
    "tornado>=6.5.1",
    "traitlets>=5.14.3",
    "trove-classifiers>=2025.5.9.12",
    "urllib3>=2.5.0",
    "virtualenv>=20.31.2",
    "wcwidth>=0.2.13",
    "zstandard>=0.23.0"
]

[project.optional-dependencies]
dev = [
    "build>=1.2.2.post1",
    "crashtest>=0.4.1",
    "debugpy>=1.8.14",
    "ipython>=9.3.0",
    "ipython_pygments_lexers>=1.1.1",
    "jupyter_client>=8.6.3",
    "jupyter_core>=5.8.1"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
