[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shared_utilities"
version = "0.1.0"
description = "Shared utilities for Python projects"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anyio>=4.9.0",
    "asttokens>=3.0.0",
    "backports.tarfile>=1.2.0",
    "CacheControl>=0.14.3",
    "certifi>=2025.7.14",
    "charset-normalizer>=3.4.2",
    "click>=8.2.1",
    "colorama>=0.4.6",
    "comm>=0.2.2",
    "decorator>=5.2.1",
    "distlib>=0.4.0",
    "dulwich>=0.23.2",
    "executing>=2.2.0",
    "fastjsonschema>=2.21.1",
    "filelock>=3.18.0",
    "findpython>=0.7.0",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "idna>=3.10",
    "importlib_metadata>=8.7.0",
    "iniconfig>=2.1.0",
    "installer>=0.7.0",
    "ipykernel>=6.29.5",
    "jaraco.classes>=3.4.0",
    "jaraco.context>=6.0.1",
    "jaraco.functools>=4.2.1",
    "jedi>=0.19.2",
    "keyring>=25.6.0",
    "matplotlib-inline>=0.1.7",
    "mccabe>=0.7.0",
    "more-itertools>=10.7.0",
    "msgpack>=1.1.1",
    "nest-asyncio>=1.6.0",
    "numpy>=2.3.1",
    "packaging>=25.0",
    "pandas>=2.3.1",
    "parso>=0.8.4",
    "pathspec>=0.12.1",
    "pbs-installer>=2025.7.12",
    "pkginfo>=1.12.1.2",
    "platformdirs>=4.3.8",
    "pluggy>=1.6.0",
    "prompt_toolkit>=3.0.51",
    "psutil>=7.0.0",
    "pure_eval>=0.2.3",
    "pycodestyle>=2.14.0",
    "pyflakes>=3.4.0",
    "Pygments>=2.19.2",
    "pyproject_hooks>=1.2.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "pywin32>=311",
    "pywin32-ctypes>=0.2.3",
    "pyzmq>=27.0.0",
    "RapidFuzz>=3.13.0",
    "requests>=2.32.4",
    "requests-toolbelt>=1.0.0",
    "shellingham>=1.5.4",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "stack-data>=0.6.3",
    "tomlkit>=0.13.3",
    "tornado>=6.5.1",
    "traitlets>=5.14.3",
    "trove-classifiers>=2025.5.9.12",
    "typing_extensions>=4.14.1",
    "tzdata>=2025.2",
    "urllib3>=2.5.0",
    "virtualenv>=20.31.2",
    "wcwidth>=0.2.13",
    "zipp>=3.23.0",
    "zstandard>=0.23.0"
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "build>=1.2.2.post1",
    "debugpy>=1.8.15",
    "flake8>=7.3.0",
    "ipython>=9.4.0",
    "ipython_pygments_lexers>=1.1.1",
    "jupyter_client>=8.6.3",
    "jupyter_core>=5.8.1",
    "mypy>=1.17.0",
    "mypy_extensions>=1.1.0",
    "pytest>=8.4.1",
    "ruff>=0.12.4"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
